--- a/src/app/components/fiche-animal-details/fiche-animal-details.component.html
+++ b/src/app/components/fiche-animal-details/fiche-animal-details.component.html
@@ -1,6 +1,3 @@
-<p><a (click)="goBackButtonPressed()" style='cursor: pointer'>Go Back</a>
-  <a (click)="editButtonPressed()" style='cursor: pointer'>Edit </a>
-  <a (click)="deleteButtonPressed()" style='cursor: pointer'>Delete</a></p>
 <div class='ficheAnimal panel panel-default'>
   <div class="panel-heading">
     <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
@@ -20,8 +17,8 @@
       <div>{{ ficheAnimal.age }}</div>
       <div class="data-title">Personnalité:</div>
       <div>{{ ficheAnimal.personnalite }}</div>
-      <div class="data-title">Temperament:</div>
-      <div>{{ ficheAnimal.temperament }}</div>
+      <div class="data-title">Description:</div>
+      <div>{{ ficheAnimal.description }}</div>
       <div class="data-title">Humeur:</div>
       <div>{{ ficheAnimal.humeur }}</div>
       <div class="data-title">Lieu Préféré:</div>
