--- a/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
+++ b/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
@@ -1,14 +1,9 @@
-<div class='recipe panel panel-default' (click)="userClicked()">
+<div class='ficheAnimal panel panel-default'> 
   <div class="panel-heading">
     <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
   </div>
   <div class="panel-body">
-    <div class='cover-photo-holder'>
-      <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg' }}"/>
-    </div>
-    <p>{{ ficheAnimal.age }}</p>
-    <p *ngIf="ficheAnimal.sexe"> Female </p>
-    <p *ngIf="!ficheAnimal.sexe"> Male </p>
-
+    <p>Age : {{ ficheAnimal.age }}</p>
+    <p>Sexe : {{ ficheAnimal.sexe }}</p>
   </div>
 </div>
