--- a/src/app/components/adherent-fiche-details/adherent-fiche-details.component.html
+++ b/src/app/components/adherent-fiche-details/adherent-fiche-details.component.html
@@ -1,3 +1,28 @@
-<p>
-  adherent-fiche-details works!
-</p>
+<p><a (click)="goBackButtonPressed()" style='cursor: pointer'>Go Back</a>
+<div class="panel-heading">
+    <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
+  <div class="panel-body">
+    <div class='cover-photo-holder'>
+      <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg'}}"/>
+    </div>
+    <p>{{ ficheAnimal.race }}</p>
+    <div>
+      <div class="data-title">Sexe:</div>
+      <div>
+      <p *ngIf="ficheAnimal.sexe"> Female </p>
+      <p *ngIf="!ficheAnimal.sexe"> Male </p>
+      </div>
+      <div class="data-title">Age:</div>
+      <div>{{ ficheAnimal.age }}</div>
+      <div class="data-title">Personnalité:</div>
+      <div>{{ ficheAnimal.personnalite }}</div>
+      <div class="data-title">Description:</div>
+      <div>{{ ficheAnimal.description }}</div>
+      <div class="data-title">Humeur:</div>
+      <div>{{ ficheAnimal.humeur }}</div>
+      <div class="data-title">Lieu Préféré:</div>
+      <div>{{ ficheAnimal.lieuPrefere }}</div>
+    </div>
+  </div>
+</div>
+
