Creation of delete function in AdherentFicheDetails

--- a/src/app/components/adherent-fiche-details/adherent-fiche-details.component.html
+++ b/src/app/components/adherent-fiche-details/adherent-fiche-details.component.html
@@ -1,4 +1,6 @@
 <p><a (click)="goBackButtonPressed()" style='cursor: pointer'>Go Back</a>
+<a (click)="editButtonPressed()" style='cursor: pointer'>Edit </a>
+<a (click)="deleteButtonPressed()" style='cursor: pointer'>Delete</a></p>
 <div class="panel-heading">
     <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
   <div class="panel-body">
