--- a/src/app/components/adherent-compte/adherent-compte.component.html
+++ b/src/app/components/adherent-compte/adherent-compte.component.html
@@ -1,2 +1,5 @@
+<div style="float: right; padding: 5px"><input type="button" value="Ajouter une fiche"
+    (click)="addNewFicheAnimalPressed()"/></div>
+
 <app-adherent-summary [adherent] = "adherent"></app-adherent-summary>
 <app-adherent-fiche-animal *ngFor="let ficheAnimal of fichesAnimal" [ficheAnimal]="ficheAnimal" (userClick)="userClickedOnFicheAnimal($event)"></app-adherent-fiche-animal>
