--- a/src/app/components/adherent-fiche-animal/adherent-fiche-animal.component.html
+++ b/src/app/components/adherent-fiche-animal/adherent-fiche-animal.component.html
@@ -1,4 +1,4 @@
-<div class='ficheAnimal panel panel-default' (click)="userClicked()">
+<div class='ficheAnimal panel panel-default'>
     <div class="panel-heading">
       <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
     </div>
@@ -7,7 +7,7 @@
         <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg'}}"/>
       </div>
       <p>{{ ficheAnimal.race }}</p>
-      <div>
+      <div (click)="userClicked()">
         <div class="data-title">Sexe:</div>
         <div>
         <p *ngIf="ficheAnimal.sexe"> Female </p>
