--- a/src/app/components/fiche-animal-details/fiche-animal-details.component.html
+++ b/src/app/components/fiche-animal-details/fiche-animal-details.component.html
@@ -25,4 +25,6 @@
       <div>{{ ficheAnimal.lieuPrefere }}</div>
     </div>
   </div>
+  <div style="float: right; padding: 5px"><input type="button" value="Proposer une sortie"
+    (click)="addNewMessagePressed()"/></div>
 </div>
