--- a/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
+++ b/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
@@ -1,4 +1,4 @@
-<div class='ficheAnimal panel panel-default'> 
+<div class='ficheAnimal panel panel-default' (click)="userClicked()"> 
   <div class="panel-heading">
     <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
   </div>
