--- a/src/app/components/admin-compte/admin-compte.component.html
+++ b/src/app/components/admin-compte/admin-compte.component.html
@@ -1,3 +1,3 @@
-<p>
-  admin-compte works!
-</p>
+<p><a (click)="ficheAnimalMangamentPressed()" style='cursor: pointer'>Gérer les fiches animales</a>
+  <a (click)="adherentManagementPressed()" style='cursor: pointer'>Gérer les adhérents</a>
+  <a (click)="evenementManagementPressed()" style='cursor: pointer'>Gérer les évenements</a></p>
