Update of Admin components

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,7 +1,3 @@
-<p>
-  accueil works!
-</p>
-
 <p><a (click)="connexionAdherentButtonPressed()" style='cursor: pointer'>Connexion Adherent</a></p>
 
-<p><a (click)="connexionAdminButtonPressed()" style='cursor: pointer'>Connexion Administrateurt</a></p>
+<p><a (click)="connexionAdminButtonPressed()" style='cursor: pointer'>Connexion Administrateur</a></p>
