--- a/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
+++ b/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
@@ -3,7 +3,12 @@
     <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
   </div>
   <div class="panel-body">
+      <div class='cover-photo-holder'>
+          <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg' }}"/>
+        </div>
     <p>Age : {{ ficheAnimal.age }}</p>
     <p>Sexe : {{ ficheAnimal.sexe }}</p>
+    <p *ngIf="ficheAnimal.sexe"> Female </p>
+    <p *ngIf="!ficheAnimal.sexe"> Male </p>
   </div>
 </div>
