--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,3 +1,13 @@
-<p><a (click)="connexionAdherentButtonPressed()" style='cursor: pointer'>Connexion Adherent</a></p>
+<div class="Entete" style="background-color: #eee"><b>Bienvenue sur DogsOut !</b></div>
 
-<p><a (click)="connexionAdminButtonPressed()" style='cursor: pointer'>Connexion Administrateur</a></p>
+<div column="3">
+<div class="connexion" style="text-align: center">
+<button style="background-color: #99ccff; width:500px"><a (click)="connexionAdminButtonPressed()" style='cursor: pointer'>Connexion Administrateur</a></button>
+<button style="background-color: #00cc66; width:500px"><a (click)="connexionAdherentButtonPressed()" style='cursor: pointer'>Connexion Adherent</a></button>
+<button style="background-color: #ffcc99; width:500px"><a (click)="addNewCompteAdherentPressed()" style='cursor: pointer'>S'inscrire</a></button>
+</div>
+</div>
+
+<div class='cover-photo-holder'>
+    <img src="/assets/logoDogsOut.JPG"/>
+ </div>
