--- a/src/app/components/adherent-compte-edit/adherent-compte-edit.component.html
+++ b/src/app/components/adherent-compte-edit/adherent-compte-edit.component.html
@@ -1,3 +1,5 @@
+<div class="w-100 p-3" style="background-color: #eee;"><b>Création / Mise à jour du compte</b></div>
+
 <div class="CompteAdherentUpadate panel panel-default">
     <div class="panel-heading">
       <h4>Création / Mise à jour du compte</h4>
