--- a/src/app/components/admin-evenement-summary/admin-evenement-summary.component.html
+++ b/src/app/components/admin-evenement-summary/admin-evenement-summary.component.html
@@ -1,9 +1,11 @@
-<div class='recipe panel panel-default' (click)="userClicked()">
-    <div class="panel-heading">
-      <h3 class="panel-title">{{ evenement.nomEvent }}</h3>
-    </div>
-    <div class="panel-body">
-      <p>{{ evenement.lieu }}</p>
-    </div>
-  </div>
+<p-card header="{{ evenement.nomEvent }}" subheader="{{ evenement.lieu }}" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+  <p-header>
+      <img src="Card" src="/assets/ParcChien.jpg">
+  </p-header>
+  <div></div>
+  <p-footer>
+      <button pButton type="button" label="Gérer" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"></button>
+  </p-footer>
+</p-card>
+<br>
   
