--- a/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
+++ b/src/app/components/fiche-animal-summary/fiche-animal-summary.component.html
@@ -1,14 +1,17 @@
-<div class='ficheAnimal panel panel-default' (click)="userClicked()"> 
-  <div class="panel-heading">
-    <h3 class="panel-title">{{ ficheAnimal.nomAnim }}</h3>
-  </div>
-  <div class="panel-body">
-      <div class='cover-photo-holder'>
-          <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg' }}"/>
-        </div>
-    <p>Age : {{ ficheAnimal.age }}</p>
-    <p>Sexe : {{ ficheAnimal.sexe }}</p>
-    <p *ngIf="ficheAnimal.sexe"> Female </p>
-    <p *ngIf="!ficheAnimal.sexe"> Male </p>
-  </div>
+<p-toast [style]="{marginTop: '80px'}"></p-toast>
+
+<p-panel header="{{ ficheAnimal.nomAnim }}" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
+<div class="row" (click)="userClicked()">
+   <div class="col-4">
+     <img src="{{ ficheAnimal.cover_photo ? ficheAnimal.cover_photo : '/assets/Image_Chien.jpg' }}" width="300" length="300" class="rounded-0"/>
+   </div>
+   <div class="col-4">
+     <div class="row">Race: &nbsp; {{ ficheAnimal.race }}</div>
+     <div class="row">Age: &nbsp; {{ ficheAnimal.age }} ans</div>
+   </div>
+   <div class="col-4">
+     <p *ngIf="ficheAnimal.sexe">Sexe: &nbsp; <img src='/assets/genre_masculin.png' width="50" length="50"/></p>
+     <p *ngIf="!ficheAnimal.sexe">Sexe: &nbsp; <img src='/assets/genre_feminin.png' width="50" length="50"/></p>
+   </div>
 </div>
+</p-panel>
