--- a/src/app/components/admin-evenement-details/admin-evenement-details.component.html
+++ b/src/app/components/admin-evenement-details/admin-evenement-details.component.html
@@ -1,17 +1,14 @@
-<p><a (click)="goBackButtonPressed()" style='cursor: pointer'>Go Back</a>
-  <a (click)="editButtonPressed()" style='cursor: pointer'>Edit </a>
-  <a (click)="deleteButtonPressed()" style='cursor: pointer'>Delete</a></p>
-  <div class='evenement panel panel-default'>
-  <div class="panel-heading">
-    <h3 class="panel-title">{{ evenement.nomEvent }}</h3>
-  </div>
-  <div class="panel-body">
-    <p>{{ evenement.lieu }}</p>
-    <div>
-      <div class="data-title">Date début:</div>
-      <div>{{ evenement.dateDeb }}</div>
-      <div class="data-title">Date fin:</div>
-      <div>{{ evenement.dateFin }}</div>
-      </div>
-  </div>
-</div>
+<p-card header="{{ evenement.nomEvent }}" subheader="{{ evenement.lieu }}" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+    <p-header>
+        <img src="Card" src="/assets/ParcChien.jpg">
+    </p-header>
+    <div>Début:&nbsp; {{ evenement.dateDeb }}</div>
+    <div>Fin:&nbsp; {{ evenement.dateFin }}</div>
+    <p-footer>
+        <button pButton type="button" label="Modifier" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"><a (click)="editButtonPressed()" style='cursor: pointer'></a></button>
+        <button pButton type="button" label="Supprimer" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"><a (click)="deleteButtonPressed()" style='cursor: pointer'></a></button>
+    </p-footer>
+</p-card>
+<br>
+
+<button type="button" class="btn btn-info"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour à la liste des évènements</a></button>
