--- a/src/app/components/admin-evenement-list/admin-evenement-list.component.html
+++ b/src/app/components/admin-evenement-list/admin-evenement-list.component.html
@@ -1,4 +1,6 @@
 <div style = "float: right; padding: 5px"><input type="button" value="Ajouter Evenement"
   (click)="addNewEventPressed()"/></div>
 
+<button type="button" class="btn btn-outline-secondary" (click)="goBackButtonPressed()">Retour au Menu Admin</button>
+<br>
 <app-admin-evenement-summary *ngFor="let evenement of evenements" [evenement]="evenement" (userClick)="userClickedOnEvenement($event)"></app-admin-evenement-summary>
