--- a/src/app/components/admin-fiche-list/admin-fiche-list.component.html
+++ b/src/app/components/admin-fiche-list/admin-fiche-list.component.html
@@ -1,1 +1,6 @@
+<button type="button" class="btn btn-outline-secondary" (click)="goBackButtonPressed()">Retour au Menu Admin</button>
+<br>
 <app-admin-fich-summary *ngFor="let ficheAnimal of fichesAnimal" [ficheAnimal]="ficheAnimal" (userClick)="userClickedOnFicheAdminAnimal($event)"></app-admin-fich-summary>
+
+
+
