--- a/src/app/components/evenement-summary/evenement-summary.component.html
+++ b/src/app/components/evenement-summary/evenement-summary.component.html
@@ -1,9 +1,7 @@
-<div class='recipe panel panel-default' (click)="userClicked()">
-    <div class="panel-heading">
-      <h3 class="panel-title">{{ evenement.nomEvent }}</h3>
-    </div>
-    <div class="panel-body">
-      <p>{{ evenement.lieu }}</p>
-    </div>
-  </div>
-  
+  <p-card header="{{ evenement.nomEvent }}" [style]="{width: '360px'}" (click)="userClicked()">
+      <div>{{ evenement.lieu }}</div>
+      <div class="col-4">
+          <img src="/assets/ParcChien.jpg" width="300" length="300" class="rounded-0"/>
+      </div>
+  </p-card>
+  <br>
