Update html_css of AdminCreateEvent and AdminEvenementList

--- a/src/app/components/admin-create-event/admin-create-event.component.html
+++ b/src/app/components/admin-create-event/admin-create-event.component.html
@@ -1,32 +1,38 @@
-  <div class="newrevent panel panel-default">
-    <div class="panel-heading">
-      <h4>Ajouter un Evenement</h4>
-    </div>
-    <div class="panel-body">
-      <div class="form-group">
+<div class="w-100 p-3" style="background-color: #eee; text-align: center"><b>Bonjour, quel évènement voulez-vous créer ?</b></div>
+  
+<div class='cover-photo-holder'>
+  <img src="/assets/logoDogsOut.JPG"/>
+</div>
+
+<div class='cover-photo-holder2'>
+  <img src="/assets/logoDogsOut.JPG"/>
+</div>
+
+  <form id="formEvenement">
+      <div class="col-sm-3 my-2">
         <input class="form-control" [(ngModel)]="evenement_in_progress.nomEvent" type="text" 
         placeholder="Nom de l'évenement" name="nomEvent" />
       </div>
   
-      <div class="input-group">
+      <div class="col-sm-3 my-2">
           <input type="text" class="form-control" [(ngModel)]="evenement_in_progress.lieu" 
           placeholder="Entrez un lieu" name="lieu" />
       </div>
   
-      <div class="input-group">
+      <div class="col-sm-3 my-2">
             <input type="text" class="form-control" [(ngModel)]="evenement_in_progress.dateDeb" 
             placeholder="jj/mm/aaaa" name="dateDeb" />
         </div>
-      <div class="input-group">
+      <div class="col-sm-3 my-2">
           <input type="text" class="form-control" [(ngModel)]="evenement_in_progress.dateFin" 
           placeholder="jj/mm/aaaa" name="dateFin" />
       </div>  
-    </div>
-    <div class="input-group">
+
+    <div class="col-sm-3 my-2">
         <input type="text" class="form-control" [(ngModel)]="evenement_in_progress.admin.numAdmin" 
         placeholder="Votre ID" name="numAdmin" />
     </div>  
-    <div class = "input-group">
+    <div class ="input-group">
         <input type="button" value="Ajouter un Evenement" (click) ="addUpdateEvenementClicked()"/>
     </div>
-  </div>
+  </form>
