--- a/src/app/components/admin-evenement-summary/admin-evenement-summary.component.html
+++ b/src/app/components/admin-evenement-summary/admin-evenement-summary.component.html
@@ -1,11 +1,14 @@
+
+<div id="FicheEvenement">
 <p-card header="{{ evenement.nomEvent }}" subheader="{{ evenement.lieu }}" [style]="{width: '360px'}" styleClass="ui-card-shadow">
   <p-header>
       <img src="Card" src="/assets/ParcChien.jpg">
   </p-header>
-  <div></div>
+  
   <p-footer>
       <button pButton type="button" label="Gérer" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"></button>
   </p-footer>
 </p-card>
+</div>
 <br>
   
