--- a/src/app/components/fiche-animal-details/fiche-animal-details.component.html
+++ b/src/app/components/fiche-animal-details/fiche-animal-details.component.html
@@ -41,3 +41,4 @@
 
 
 <button type="button" class="btn btn-light" style="align-content: center"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour à la liste</a></button>
+<button type="button" class="btn btn-light" style="align-content: center"><a (click)="addNewMessagePressed()" style='cursor: pointer'>Envoyer un message</a></button>
