--- a/src/app/components/admin-evenement-details/admin-evenement-details.component.html
+++ b/src/app/components/admin-evenement-details/admin-evenement-details.component.html
@@ -1,3 +1,16 @@
+<div class="w-100 p-3" style="background-color: #eee;"><b>Voici les détails de l'évenement {{ evenement.nomEvent }}</b></div>
+
+<button id="retour" type="button" class="btn btn-info"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour à la liste des évènements</a></button>
+
+<div class='cover-photo-holder'>
+  <img src="/assets/logoDogsOut.JPG"/>
+</div>
+
+<div class='cover-photo-holder2'>
+  <img src="/assets/logoDogsOut.JPG"/>
+</div>
+
+<div class="Event">
 <p-card header="{{ evenement.nomEvent }}" subheader="{{ evenement.lieu }}" [style]="{width: '360px'}" styleClass="ui-card-shadow">
   <p-header>
       <img src="Card" src="/assets/ParcChien.jpg">
@@ -10,5 +23,4 @@
   </p-footer>
 </p-card>
 <br>
-
-<button type="button" class="btn btn-info"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour à la liste des évènements</a></button>
+</div>
