--- a/src/app/components/fiche-animal-list/fiche-animal-list.component.html
+++ b/src/app/components/fiche-animal-list/fiche-animal-list.component.html
@@ -1,3 +1,5 @@
+<div class="w-100 p-3" style="background-color: #eee;"><b>Voici la liste des amis potentiels</b></div>
+
 <button type="button" class="btn btn-outline-secondary" (click)="goBackButtonPressed()">Retour au Compte</button>
 <br>
 
