Update html_css of EvenementDetails

--- a/src/app/components/admin-fiche-list/admin-fiche-list.component.html
+++ b/src/app/components/admin-fiche-list/admin-fiche-list.component.html
@@ -1,3 +1,5 @@
+<div class="w-100 p-3" style="background-color: #eee;"><b>Liste des fiches</b></div>
+
 <button type="button" class="btn btn-outline-secondary" (click)="goBackButtonPressed()">Retour au Compte</button>
 <br>
 
