--- a/src/app/components/edit-new-fiche-animal/edit-new-fiche-animal.component.html
+++ b/src/app/components/edit-new-fiche-animal/edit-new-fiche-animal.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 p-3" style="background-color: #eee;"><b>Création d'une nouvelle fiche animale</b></div>
+<div class="w-100 p-3" style="background-color: #eee;"><b>Création d'une nouvelle fiche</b></div>
 
 <div class='cover-photo-holder'>
   <img src="/assets/logoDogsOut.JPG"/>
