--- a/src/app/components/evenement-details/evenement-details.component.html
+++ b/src/app/components/evenement-details/evenement-details.component.html
@@ -1,15 +1,20 @@
-<p><a (click)="goBackButtonPressed()" style='cursor: pointer'>Go Back</a>
-  <div class='evenement panel panel-default'>
-  <div class="panel-heading">
-    <h3 class="panel-title">{{ evenement.nomEvent }}</h3>
-  </div>
-  <div class="panel-body">
-    <p>{{ evenement.lieu }}</p>
-    <div>
+<div class="w-100 p-3" style="background-color: #eee;"><b>Voici les détails de l'évènement {{ evenement.nomEvent }}</b></div>
+  
+<div class='cover-photo-holder'>
+    <img src="/assets/logoDogsOut.JPG"/>
+ </div>
+  
+  <div class="evenementDetails">
+      <div class="data-title">Nom : </div>
+      <div class="info">{{ evenement.nomEvent }}</div>
+    <div class="data-title">Lieu:</div>
+    <div class="info">{{ evenement.lieu }}</div>
       <div class="data-title">Date début:</div>
-      <div>{{ evenement.dateDeb }}</div>
+      <div class="info">{{ evenement.dateDeb }}</div>
       <div class="data-title">Date fin:</div>
-      <div>{{ evenement.dateFin }}</div>
-      </div>
+      <div class="info">{{ evenement.dateFin }}</div>
   </div>
-</div>
+
+
+<button type="button" class="btn btn-light" style="align-content: center; background-color: #44AABF"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour à la liste</a></button>
+<button type="button" class="btn btn-light" style="align-content: center; background-color: rgb(68, 191, 95)"><a (click)="inscription()" style='cursor: pointer'>S'inscrire</a></button>
