--- a/src/app/components/admin-evenement-details/admin-evenement-details.component.html
+++ b/src/app/components/admin-evenement-details/admin-evenement-details.component.html
@@ -5,8 +5,8 @@
   <div>Début:&nbsp; {{ evenement.dateDeb }}</div>
   <div>Fin:&nbsp; {{ evenement.dateFin }}</div>
   <p-footer>
-      <button pButton type="button" label="Modifier" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"><a (click)="editButtonPressed()" style='cursor: pointer'></a></button>
-      <button pButton type="button" label="Supprimer" icon="pi pi-check" style="margin-right: .25em" (click)="userClicked()"><a (click)="deleteButtonPressed()" style='cursor: pointer'></a></button>
+    <button type="button" class="btn btn-warning"><a (click)="editButtonPressed()" style='cursor: pointer'>Modifier</a></button>
+    <button type="button" class="btn btn-danger"><a (click)="deleteButtonPressed()" style='cursor: pointer'>Supprimer</a></button>
   </p-footer>
 </p-card>
 <br>
