--- a/src/app/components/adherent-summary/adherent-summary.component.html
+++ b/src/app/components/adherent-summary/adherent-summary.component.html
@@ -1,10 +1,10 @@
 <div class='adherent panel panel-default'> 
   <div class="panel-heading">
-    <h3 class="panel-title">Bienvenue {{ adherent.pseudonyme }}</h3>
+    <h3 class="panel-title">Bienvenue </h3>
   </div>
   <div class="panel-body" (click)="userClicked()">
-    <p>Nom: {{ adherent.nom }}</p>
-    <p>Prenom : {{ adherent.prenom }}</p>
-    <p>Email : {{ adherent.email }}</p>
+    <p><b>{{ adherent.pseudonyme }}</b></p>
+    <img src="/assets/engrenage.png" width="30px" height="30px"/>
+    Paramètres
   </div>
 </div>
