--- a/src/app/components/admin-evenement-list/admin-evenement-list.component.html
+++ b/src/app/components/admin-evenement-list/admin-evenement-list.component.html
@@ -1,5 +1,5 @@
 <div class="w-100 p-3" style="background-color: #eee;"><b>Voici la liste de tous les évènements !</b></div>
-
+<button id="retour" type="button" class="btn btn-info"><a (click)="goBackButtonPressed()" style='cursor: pointer'>Retour au Menu Admin</a></button>
 
 <div class="Ajout"><input type="button" value="Ajouter Evenement"
   (click)="addNewEventPressed()"/></div>
