--- a/src/app/components/adherent-compte/adherent-compte.component.html
+++ b/src/app/components/adherent-compte/adherent-compte.component.html
@@ -27,14 +27,14 @@
         </div>
 </div>
 <div class="container-fluid bg-3 text-center">
-        <div class="row">
-        <div class="comp">
-           <a (click)="ficheAnimalListButtonPressed()" style='cursor: pointer'><img src="/assets/dog_head.png" width="250px" height="250px"/><br>Trouver un copain</a>
-        </div>
-        <div class="col-sm-8">
-        
-        </div>
-        </div>
+    <div class="row">
+    <div class="comp">
+       <a (click)="ficheAnimalListButtonPressed()" style='cursor: pointer'><img src="/assets/dog_head.png" width="250px" height="250px"/><br><b>TROUVER UN COPAIN</b></a>
+    </div>
+    <div class="comp2">
+        <a (click)="addNewFicheAnimalPressed()" style='cursor: pointer'><img src="/assets/niche.jpg" width="250px" height="250px"/><br><b>AJOUTER UN TOUTOU</b></a>
+    </div>
+    </div>
 </div>
 <div class="bg-4 container-fluid">
     <br>
@@ -42,7 +42,3 @@
     <br>
 <marquee class="marquee" behavior="scroll" direction="left" scrollamount="10"><img src="/assets/gif_chien.gif" height="80" width="100"/></marquee>
 </div>
-
-
-<div style="float: right; padding: 5px"><input type="button" value="Ajouter une fiche"
-    (click)="addNewFicheAnimalPressed()"/></div>
